data/all_generated_tests/raw_wast_tests/unreachable_InfiniteLoops_1176.wast
;; 7. **Test Description:**    - Design a `loop` with an inner `block` that terminates with `unreachable`, and a `br` instruction intending to break out of the loop. Once the block is executed, the trap must occur.    - Constraint: Experiments with `unreachable` embedded in `block` instructions within loops.    - Infinite Loop Relation: Confirms that the trap inside the `block` prevents infinite loop execution.

(assert_invalid
  (module (func $test-loop-block-unreachable
    (loop (block (br 1) (unreachable)))
  ))
  "type mismatch"
)